--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="decryptCiscoType7.js"></script>
 </body>
 </html>
