--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
     <footer class="page-footer">
         <div class="footer-content">
-            <img src="placeholder-image.png" alt="Logo o Imagen Descriptiva" width="50">
+            <img src="QR-Dearreck-Channel2-Small.png" alt="Logo o Imagen Descriptiva" width="50">
             <p>
-                <a href="#" target="_blank" rel="noopener noreferrer">¡Únete a mi canal de Telegram!</a>
+                <a href="t.me/dearreck_channel" target="_blank" rel="noopener noreferrer">¡Únete a mi canal de Telegram!</a>
             </p>
         </div>
     </footer>
