--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="footer-content">
             <img src="QR-Dearreck-Channel2-Small.png" alt="Logo o Imagen Descriptiva" width="50">
             <p>
-                <a href="t.me/dearreck_channel" target="_blank" rel="noopener noreferrer">¡Únete a mi canal de Telegram!</a>
+                <a href="https://t.me/dearreck_channel" target="_blank" rel="noopener noreferrer">¡Únete a mi canal de Telegram!</a>
             </p>
         </div>
     </footer>
