--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
                  <p class="warning">
                     <strong>Nota Importante:</strong> El cifrado Cisco Type 7 es débil y reversible. No debe considerarse seguro para proteger información sensible.
                  </p>
-                <div class="info-links">
-             <p>
+                 <ul class="info-links">
+             <li>
                  <a href="https://telegra.ph/service-password-encryption-Qu%C3%A9-Hace-y-Cu%C3%A1n-Seguro-Es-04-14" target="_blank" rel="noopener noreferrer">
-                     Aprende más sobre `service password-encryption` y por qué no es seguro
+                     🔓 Aprende más sobre `service password-encryption` y por qué no es seguro
                  </a>
-             </p>
-             <p>
+             </li>
+             <li>
                  <a href="https://telegra.ph/Cisco-IOS-Configuraci%C3%B3n-Avanzada-y-Seguridad-en-la-CLI-04-04" target="_blank" rel="noopener noreferrer">
-                     Descubre configuraciones de seguridad recomendadas para Cisco CLI
+                     🛡️ Descubre configuraciones de seguridad recomendadas para Cisco CLI
                  </a>
-             </p>
-         </div>
+             </li>
+         </ul>
             </div>
         </main>
     </div>
